# sacred-brain

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SESSION_LOG.md  docker-compose.maubot.yml  justfile  llama_cpp_python_ngrok.ipynb  openwebui-tool-hippocampus.json  pyproject.toml  requirements.txt  sacredbrain-mention.mbp
bots/: README.md
codex/: instructions.md  session_memory.md
config/: hippocampus.toml
docs/: API.md  APP_ONBOARDING.md  ARCHITECTURE.md  BAIBOT.md  CHATGPT_IMPORT.md  CLAUDE_CODE_BRIDGE.md  CODEX_BRIDGE.md  DREAMING.md  INGEST.md  INSTALL.md  LITELLM.md  LITELLM_GATEWAY.md  LOGGING_TO_HIPPOCAMPUS.md  MATRIX_BRIDGES.md  MAUBOT_INGEST.md  MEM0_ORG_ROAM.md  MEM0_SELF_HOSTING.md  MEMORY_GOVERNOR.md  MEMORY_GOVERNOR_v2.md  MEMORY_SYNC.md  OPENCODE_BRIDGE.md  OPENWEBUI_AUTOLOG.md  OPENWEBUI_INTEGRATION.md  PI_BRIDGE.md  README.md  REFLECTION.md  SACRED_MCP.md  SACRED_SEARCH.md  SAM_ASTROLOGY.md  SAM_LLM.md  STACK.md  VOICE_CALLS.md
extensions/: pi-bridge.ts
ingest/: hippocampus_ingest.py
memory_governor/: __init__.py  app.py  clients.py  config.py  dream.py  mem_policy.py  oracle.py  rem.py  schemas.py  scopes.py  store.py
openwebui/: hippocampus_webhook.py
ops/: CHANGELOG.md  firewall.md
sacred_brain/: astrology.py  doctor.py  llm_client.py  routing.py  sam_pipeline.py
scripts/: _outcome_drain.sh  auto_memory_tuner.py  bench_sam_fast_remote.py  codex-with-governor  codex_log.py  codex_log_impl.py  codex_summarize_session.py  dream_sweep.py  governor_context.sh  governor_digest.py  governor_precompact.sh  import_chatgpt.py  (+16 more)
(+128 files in other folders)
